--- a/docs/python/cs224w.md
+++ b/docs/python/cs224w.md
@@ -1,9 +1,6 @@
-# 🛣Stanford CS231n:Deep Learning for Computer Vision  
----
-
+# 🔭Stanford CS224w:
 <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
 <script src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js"></script>
-
 !!! info "想说的话🎇"
     
     <font size = 3.5>
@@ -13,18 +10,3 @@
     2024版PPT: [https://cs231n.stanford.edu/slides/2024/](https://cs231n.stanford.edu/slides/2024/)
     
     </font>
-
-- Stochastic Gradient Descent, SGD
-
-    
-
-- Momentum
-
-- AdaGrad
-
-- RMSProp: “Leaky AdaGrad”
-
-- Adam
-
-- AdamW: Adam Variant with Weight Decay
-
