--- a/docs/python/cs231n.md
+++ b/docs/python/cs231n.md
@@ -23,4 +23,13 @@
     
     - [Chapter 4：ImageClassification with CNNs](./cs231n-notebook/chapter4.md)
 
+    - [Chapter 5：CNN Architectures](./cs231n-notebook/chapter5.md)
+
+    - [Chapter 6: recurrent nerual network](./cs231n-notebook/chapter6.md)
+
+    - [Chapter 7: Attention and Transformers](./cs231n-notebook/chapter7.md)
+
+    - [Chapter 8:  Object Detection and Image Segmentation](./cs231n-notebook/chapter8.md)
+
     </font>
+
