--- a/docs/python/cs224w.md
+++ b/docs/python/cs224w.md
@@ -11,12 +11,17 @@
     
     </font>
 
+![](./cs224w-notebook/img/cs224w.png)
+
 !!! advice "Chapter"
 
     <font size = 3>
 
-    - [Chapter 1：](./) 
+    - [Chapter 1：Node Embeddings](./cs224w-notebook/chapter1.md) 
+
+    - [Chapter 2：Graph Neural Networks](./cs224w-notebook/chapter2.md)
     
+    - [Chapter 3：A Single Layer of a GNN](./cs224w-notebook/chapter3.md)
     
 
     </font>
