--- a/docs/python/cs224w.md
+++ b/docs/python/cs224w.md
@@ -1,4 +1,4 @@
-# 🔭Stanford CS224w:
+# 🔭Stanford CS224w:Machine Learning with Graphs
 <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
 <script src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js"></script>
 !!! info "想说的话🎇"
