--- a/docs/python/cs224w.md
+++ b/docs/python/cs224w.md
@@ -22,6 +22,18 @@
     - [Chapter 2：Graph Neural Networks](./cs224w-notebook/chapter2.md)
     
     - [Chapter 3：A Single Layer of a GNN](./cs224w-notebook/chapter3.md)
+
+    - [Chapter 4：Prediction with GNN](./cs224w-notebook/chapter4.md)
+
+    - [Chapter 5：Graph Isomorphism Network(GIN)](./cs224w-notebook/chapter5.md)
+
+    - [Chapter 6：Heterogeneous Graphs](./cs224w-notebook/chapter6.md)
+
+    - [Chapter 7：Heterogeneous Graphs Transformer](./cs224w-notebook/chapter7.md)
+
+    - [Chapter 8：Knowledge Graphs](./cs224w-notebook/chapter8.md)
+
+    - [Chapter 9：Reasoning over KGs](./cs224w-notebook/chapter9.md)
     
 
     </font>
