--- a/docs/python/cs224w.md
+++ b/docs/python/cs224w.md
@@ -35,5 +35,8 @@
 
     - [Chapter 9：Reasoning over KGs](./cs224w-notebook/chapter9.md)
     
+    - [Chapter 10：](./cs224w-notebook/chapter10.md)
+
+    - [Chapter 11：Geometric Deep Learning](./cs224w-notebook/chapter11.md)
 
     </font>
