--- a/docs/sci-paper/ComputationalPhysics/test.ipynb
+++ b/docs/sci-paper/ComputationalPhysics/test.ipynb
@@ -114,27 +114,15 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'torch_geometric'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[21], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mtorch\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mtorch_geometric\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mdatasets\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m KarateClub \n\u001b[0;32m      3\u001b[0m \u001b[38;5;66;03m# 空手道俱乐部的 34 名成员的社交网络\u001b[39;00m\n\u001b[0;32m      5\u001b[0m dataset \u001b[38;5;241m=\u001b[39m KarateClub()\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'torch_geometric'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "import torch\n",
     "from torch_geometric.datasets import KarateClub \n",
-    "# 空手道俱乐部的 34 名成员的社交网络\n",
+    "from torch_geometric.utils import to_networkx\n",
     "\n",
     "dataset = KarateClub()\n",
-    "print(len(dataset), dataset.num_features, dataset.num_classes)  # 34 4"
+    "data = dataset[0]\n"
    ]
   }
  ],
